--- a/README.Rmd
+++ b/README.Rmd
@@ -35,7 +35,7 @@ Vous pouvez installer ce package depuis GitHub :
 ```{r, eval = FALSE}
 # Install from GitHub
 library(devtools)
-devtools::install_github("nbc/didoscalim")
+devtools::install_github("mtes-mct/didoscalim")
 
 library(didoscalim)
 ```
@@ -85,7 +85,7 @@ set_work_env()
 ## Documentation
 
 Vous pouvez trouver l'ensemble de la documentation sur [la page du
-projet](https://nbc.github.io/didoscalim/) et en particuler :
+projet](https://mtes-mct.github.io/didoscalim/) et en particuler :
 
 * [comment générer un fichier augmenté](articles/csv-augmente.html)
 * [comment intégrer des nouveaux jeux/fichiers de
