--- a/vignettes/charger-des-donnees.Rmd
+++ b/vignettes/charger-des-donnees.Rmd
@@ -19,6 +19,16 @@ suppressPackageStartupMessages(library(tidyverse))
 library(didoscalim)
 ```
 
+```{r, echo=FALSE, results = FALSE, message = FALSE}
+# bugfix pour check()
+ds <- get_datasets() 
+if (nrow(ds) > 0) ds %>% 
+  filter(str_detect(title, "Données.*fictive")) %>% 
+  select(id) %>% 
+  pmap(~ delete_dataset(..1))
+```
+
+
 ## Comment utiliser didoscalim
 
 Afin d'éviter les erreurs de manipulation, il est conseillé de préparer ses
@@ -32,7 +42,7 @@ Créer un dataset avec les caractéristiques suivantes :
 
 ```{r}
 dataset <- create_dataset(
-  title = "mon nouveau dataset",
+  title = "Données de consommation fictive",
   description = "test",
   topic = "Transports",
   temporal_coverage_start = "2020-01-01",
@@ -48,10 +58,8 @@ dataset <- create_dataset(
 add_datafile(
   dataset = dataset,
   file_name = "augmente.csv",
-  title = "Données de consommation et de points de livraison d'énergie à la maille IRIS – chaleur et froid – année 2020",
-  description = paste0("Consommations annuelles et nombre de points de livraison de gaz naturel, par secteur d'activité ",
-                          "(agriculture, industrie, tertiaire, résidentiel et non affecté) ou selon le code NAF à 2 niveaux ",
-                          "selon les cas, à la maille IRIS"),
+  title = "Données de consommation fictive – chaleur et froid – année 2020",
+  description = "Consommations annuelles et nombre de points de livraison de chaleur et froid, par secteur d'activité",
   temporal_coverage_start = "2020-01-01",
   temporal_coverage_end = "2020-12-31",
   millesime = "2021-10"
@@ -85,7 +93,7 @@ Vous pouvez le chercher par son identifiant ou par son titre avec la fonction
 dans le cadre d'une mise à jour, vous pouvez utiliser `clean_metadata()` :
 
 ```{r}
-datafile <- get_datafile(title = "Données de consommation et de points de livraison d'énergie à la maille IRIS – chaleur et froid – année 2020") %>%
+datafile <- get_datafile(title = "Données de consommation fictive – chaleur et froid – année 2020") %>%
   clean_metadata()
 datafile
 ```
@@ -156,7 +164,7 @@ Pour mettre à jour le dernier millésime d'un fichier de données, la procédur
 ### trouver le datafile
 
 ```{r}
-datafile <- get_datafile(title = "Données de consommation et de points de livraison d'énergie à la maille IRIS – chaleur et froid – année 2020") %>%
+datafile <- get_datafile(title = "Données de consommation fictive – chaleur et froid – année 2020") %>%
   clean_metadata()
 datafile
 ```
