--- a/README.Rmd
+++ b/README.Rmd
@@ -42,18 +42,13 @@ library(didoscalim)
 
 ## Configuration
 
+* [utiliser les environnements](articles/les-environnements.html)
+
 La configuration de didoscalim se fait dans votre .Renviron. Pour l'éditer vous
 pouvez utiliser `usethis::edit_r_environ()`. Ajouter les lignes suivantes (la
 clef d'API est disponible dans l'interface web d'alimentation dans l'onglet "Mon
 compte")  :
 
-```
-DIDOSCALIM_BASE_PATH_ECOLE=http://api.alimentation.ecole.fr/v1
-DIDOSCALIM_API_KEY_ECOLE=ma_clef_api_ecole
-
-DIDOSCALIM_BASE_PATH_PROD=http://api.alimentation.prod.fr/v1
-DIDOSCALIM_API_KEY_PROD=ma_clef_api_prod
-```
 
 Il est fortement recommandé de tester les chargements avant de les lancer sur
 `PROD`, pour cela configurez au minimum les environnements `ECOLE` et `PROD`.
