--- a/vignettes/charger-des-donnees.Rmd
+++ b/vignettes/charger-des-donnees.Rmd
@@ -15,9 +15,9 @@ knitr::opts_chunk$set(
 ```
 
 ```{r setup}
-library(magrittr)
-library(dplyr)
 library(didoscalim)
+library(magrittr)
+library(dplyr, quietly = TRUE)
 ```
 
 ```{r, echo=FALSE, results = FALSE, message = FALSE}
@@ -36,7 +36,7 @@ if (nrow(ds) > 0) ds %>%
 
 Afin d'éviter les erreurs de manipulation, il est conseillé de préparer ses
 scripts de chargement sur l'environnement `ECOLE` et de les passer après sur
-`PROD`. Vous trouverez plus d'info dans la vignette sur [les
+`PROD`. Vous trouverez plus d'info dans [la vignette sur les
 environnements](les-environnements.html).
 
 ## Créer un dataset
