--- a/vignettes/les-environnements.Rmd
+++ b/vignettes/les-environnements.Rmd
@@ -45,8 +45,8 @@ DIDOSCALIM_API_KEY_<NOM_ENVIRONNEMENT>=ma_clef_api_ecole
 Où `<NOM_ENVIRONNEMENT>` peut prendre les valeurs `DEV`, `PREPROD`, `ECOLE` et
 `PROD`.
 
-Si vous êtes un producteur, vous devez avoir accès aux environnements `ECOLE` et
-`PROD`. Votre fichier `.Renviron` :
+Si vous êtes un producteur et que vous avez accès aux environnements `ECOLE` et
+`PROD`, votre fichier `.Renviron` ressemblera à :
 
 ```
 DIDOSCALIM_BASE_PATH_ECOLE=http://api.alimentation.ecole.fr/v1
@@ -58,9 +58,9 @@ DIDOSCALIM_API_KEY_PROD=ma_clef_api_prod
 
 ## Choisir un environnement
 
-Si vous ne sélectionnez pas d'environnement, DiDo prendra par défaut le premier
-configuré dans l'ordre : `DEV`, `PREPROD`, `ECOLE`. Il ne choisira jamais `PROD`
-implicitement.
+Si vous ne sélectionnez pas d'environnement, DiDo prendra automatiquement par
+défaut le premier configuré dans l'ordre : `DEV`, `PREPROD`, `ECOLE`. Il ne
+choisira **jamais** `PROD` implicitement.
 
 Pour sélectionner un environnement, utilisez la commande `set_work_env()` :
 
