--- a/README.Rmd
+++ b/README.Rmd
@@ -32,7 +32,7 @@ Ce package est encore en cours de développement.
 
 ## Exemple
 
-Comment générer un fichier CSV augmenté à partir d'un fichier [CSV
+Générer un fichier CSV augmenté à partir d'un fichier [CSV
 normal](vignettes/exemple.csv) et le charger dans un dataset.
 
 ```{r}
